--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav id="header">
-    <a href="#" id="logo"><img src="/img/logo.png" alt="B" /></a>
+    <a href="/" id="logo"><img src="/img/logo.png" alt="B" /></a>
     <h2 id="site-title">Bryce Fisher-Fleig</h2>
   </nav>
 
