Add RSS feed and spruced up my oldest post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="/img/favicon.png" />
+  <link href="{{ site.url }}/feed.xml" rel="alternate" type="application/rss+xml" title="Bryce Fisher-Fleig's Blog" />
   <!--[if IE]>
       <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
