--- a/css/screen.css
+++ b/css/screen.css
@@ -59,7 +59,9 @@ blockquote { border-left: solid 6px #666; color: #666; padding-left: 6px; }
 .node-article .article-header { margin-bottom: 12px; }
 .node-article .article-header datetime { display: block; }
 .node-article .article-header .article-image { display: block; width: 100%; height: auto !important; }
-.node-article .article-body p { margin-bottom: 1em; }
+.node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p { margin-bottom: 1em; }
+.node-article .article-body ul li, .node-article .article-body ol li { margin-left: 1em; }
+.node-article .article-body ul { list-style: outside square; }
 .node-article .article-footer { margin: 0 -12px; }
 .node-article .article-footer .article-call-to-action { text-align: center; padding: 12px; margin-bottom: 24px; background-color: #ddd; }
 .node-article .article-footer .article-call-to-action a.primary-cta { display: block; margin: 24px auto; color: white; border-radius: 6px; width: 200px; text-decoration: none; background-color: #7db9e8; *zoom: 1; filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF7DB9E8', endColorstr='#FF1E5799'); background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #7db9e8), color-stop(50%, #2989d8), color-stop(100%, #1e5799)); background-image: -webkit-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: -moz-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: -o-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); }
