--- a/css/screen.css
+++ b/css/screen.css
@@ -57,8 +57,10 @@ blockquote { border-left: solid 6px #666; color: #666; padding-left: 6px; }
 #main-content { margin: 0 12px; }
 
 .node-article .article-header { margin-bottom: 12px; }
+@media screen and (min-width: 624px) { .node-article .article-header { width: 600px; margin: 0 auto; } }
 .node-article .article-header datetime { display: block; }
 .node-article .article-header .article-image { display: block; width: 100%; height: auto !important; }
+@media screen and (min-width: 624px) { .node-article .article-body { width: 600px; margin: 0 auto; } }
 .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p { margin-bottom: 1em; }
 .node-article .article-body ul li, .node-article .article-body ol li { margin-left: 1em; }
 .node-article .article-body ul { list-style: outside square; }
@@ -66,5 +68,10 @@ blockquote { border-left: solid 6px #666; color: #666; padding-left: 6px; }
 .node-article .article-footer .article-call-to-action { text-align: center; padding: 12px; margin-bottom: 24px; background-color: #ddd; }
 .node-article .article-footer .article-call-to-action a.primary-cta { display: block; margin: 24px auto; color: white; border-radius: 6px; width: 200px; text-decoration: none; background-color: #7db9e8; *zoom: 1; filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF7DB9E8', endColorstr='#FF1E5799'); background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #7db9e8), color-stop(50%, #2989d8), color-stop(100%, #1e5799)); background-image: -webkit-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: -moz-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: -o-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); }
 .node-article .article-footer .article-call-to-action .primary-cta strong { display: block; font-size: 27px; line-height: 36px; text-shadow: 2px 2px #333; }
+.node-article .article-footer .comments { padding: 0 12px; }
+@media screen and (min-width: 624px) { .node-article .article-footer .comments { width: 600px; margin: 0 auto; } }
 .node-article .article-footer .related-content { padding: 0 12px; }
+@media screen and (min-width: 624px) { .node-article .article-footer .related-content { width: 600px; margin: 0 auto; } }
 .node-article .article-footer .related-content ul { list-style: square outside; margin-left: 24px; }
+
+@media screen and (min-width: 450px) { html { font-size: 20px; line-height: 30px; } }
