Added rss feed to Call to Action

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
         on twitter
       </a>
       
-      <p>or <a href="#" class="secondary-cta">RSS</a> to read my next post <strong>first!</strong></p>
+      <p>or <a href="/feed.xml" class="secondary-cta">RSS</a> to read my next post <strong>first!</strong></p>
     </div>
 
     <div class="comments">
