--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -106,3 +106,11 @@ blockquote { border-left: solid 6px #666; color: #666; padding-left: 6px; }
 @media screen and (min-width: 450px) {
   html { font-size: 20px; line-height: 30px; }
 }
+
+//////////////////////////////
+// Named pages - custom layout
+#home #main-content {
+  @include centered-content;
+  article { margin: 30px; }
+  .pagination { margin: 60px auto 0 auto; text-align: center; }
+}
