--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -71,7 +71,7 @@ blockquote { border-left: solid 6px #666; color: #666; padding-left: 6px; }
 
   .article-body {
     @include centered-content;
-    
+    padding-bottom: 24px;
 
     ul, ol, p { margin-bottom: 1em; }
     ul li, ol li { margin-left: 1em; }
