--- a/css/screen.css
+++ b/css/screen.css
@@ -22,7 +22,7 @@ html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24p
 
 h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; }
 
-h2 { font-size: 30px; line-height: 36px; margin: 36px 6px 0; font-weight: bold; }
+h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; }
 
 h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; }
 
@@ -41,6 +41,8 @@ a:active { color: #f66; }
 strong { font-weight: 600; }
 
 em { font-style: italic; }
+
+datetime { color: #666; font-size: smaller; }
 
 code { font-family: monospace; font-size: 14px; }
 
