--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -34,7 +34,7 @@
 html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24px; }
 
 h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; }
-h2 { font-size: 30px; line-height: 36px; margin: 36px 6px 0; font-weight: bold; }
+h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; }
 h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; }
 h4 { font-size: 20px; font-weight: bold; }
 h5 { font-weight: bold; }
@@ -44,6 +44,7 @@ a:visited { color: #009; }
 a:active { color: #f66; }
 strong { font-weight: 600; }
 em { font-style: italic; }
+datetime { color:#666; font-size:smaller; } 
 
 code { font-family: monospace; font-size: 14px; }
 pre code { display: block; color: white; background-color: #333; padding: 6px 0 6px 1em; margin-bottom: 24px; word-wrap: break-word; white-space: pre-wrap; }
