--- a/css/screen.css
+++ b/css/screen.css
@@ -16,21 +16,21 @@ a img { border: none; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary { display: block; }
 
-@font-face { font-family: 'liberation_serifregular'; src: url("../fonts/LiberationSerif-Regular-webfont.eot"); src: url("../fonts/LiberationSerif-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/LiberationSerif-Regular-webfont.woff") format("woff"), url("../fonts/LiberationSerif-Regular-webfont.ttf") format("truetype"), url("../fonts/LiberationSerif-Regular-webfont.svg#liberation_serifregular") format("svg"); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'liberation_serifregular'; src: url("../fonts/LiberationSerif-Regular-webfont.eot"); src: url("../fonts/LiberationSerif-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/LiberationSerif-Regular-webfont.woff") format("woff"), url("../fonts/LiberationSerif-Regular-webfont.ttf") format("truetype"), url("../fonts/LiberationSerif-Regular-webfont.svg#liberation_serifregular") format("svg"); }
 
-html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24px; }
+html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24px; color: #333; }
 
-h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; }
+h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; color: #000; }
 
-h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; }
+h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; color: #000; }
 
-h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; }
+h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; color: #000; }
 
-h4 { font-size: 20px; font-weight: bold; }
+h4 { font-size: 20px; font-weight: bold; color: #000; }
 
-h5 { font-weight: bold; }
+h5 { font-weight: bold; color: #000; }
 
-h6 { font-variant: small-caps; }
+h6 { font-variant: small-caps; color: #000; }
 
 a:link { color: #66f; }
 
