--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -25,23 +25,23 @@
        url('../fonts/LiberationSerif-Regular-webfont.woff') format('woff'),
        url('../fonts/LiberationSerif-Regular-webfont.ttf') format('truetype'),
        url('../fonts/LiberationSerif-Regular-webfont.svg#liberation_serifregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
 }
 
 /////////////////////
 // Typography
-html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24px; }
+html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24px; color: #333; }
 
-h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; }
-h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; }
-h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; }
-h4 { font-size: 20px; font-weight: bold; }
-h5 { font-weight: bold; }
-h6 { font-variant: small-caps; }
+h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; color: #000; }
+h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; color: #000; }
+h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; color: #000; }
+h4 { font-size: 20px; font-weight: bold; color: #000; }
+h5 { font-weight: bold; color: #000; }
+h6 { font-variant: small-caps; color: #000; }
+
 a:link { color: #66f; }
 a:visited { color: #009; }
 a:active { color: #f66; }
+
 strong { font-weight: 600; }
 em { font-style: italic; }
 datetime { color:#666; font-size:smaller; } 
