--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,11 +5,13 @@
 
 @import "compass/reset";
 @import "compass";
+@import "pygments.fruity";
 
 @mixin centered-content {
   @media screen and (min-width: 624px) {
     width: 600px;
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
   }
   @media screen and (min-width: 800px) {
     width: 750px;
@@ -31,12 +33,12 @@
 // Typography
 html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24px; color: #333; }
 
-h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; color: #000; }
-h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; color: #000; }
-h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; color: #000; }
-h4 { font-size: 20px; font-weight: bold; color: #000; }
-h5 { font-weight: bold; color: #000; }
-h6 { font-variant: small-caps; color: #000; }
+h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; color: #000; @include centered-content; }
+h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; color: #000; @include centered-content; }
+h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; color: #000; @include centered-content; }
+h4 { font-size: 20px; font-weight: bold; color: #000; @include centered-content; }
+h5 { font-weight: bold; color: #000; @include centered-content; }
+h6 { font-variant: small-caps; color: #000; @include centered-content; }
 
 a:link { color: #66f; }
 a:visited { color: #009; }
@@ -46,9 +48,11 @@ strong { font-weight: 600; }
 em { font-style: italic; }
 datetime { color:#666; font-size:smaller; } 
 
+.highlight { background-color: #333; margin-bottom: 24px; }
 code { font-family: monospace; font-size: 14px; }
-pre code { display: block; color: white; background-color: #333; padding: 6px 0 6px 1em; margin-bottom: 24px; word-wrap: break-word; white-space: pre-wrap; }
-blockquote { border-left: solid 6px #666; color: #666; padding-left: 24px; }
+pre code { @include centered-content; display: block; color: white; padding: 6px 0 6px 1em; word-wrap: break-word; white-space: pre-wrap; }
+
+blockquote { background-color: #ddd; padding:24px 0 12px 0; margin-bottom:24px; }
 blockquote + h2,
 blockquote + h3,
 blockquote + h4,
@@ -63,29 +67,29 @@ blockquote + h6 { padding-top: 24px; }
   background: url('../img/header.jpg') repeat-x; height: 36px;
 
   #logo img { height: 24px; width: auto; margin: 6px; float: left; }
-  h2#site-title { float: left; font-size: 24px; line-height: 36px; margin: 0; color: white; text-shadow: 1px 1px black; }
+  h2#site-title { float: left; font-size: 24px; line-height: 36px; margin: 0; color: white; text-shadow: 1px 1px black; width: auto; }
 }
 
-#main-content { margin: 0 12px; }
+//#main-content { margin: 0 12px; }
 
 .node-article {
+  padding-left: 6px; padding-right: 6px;
 
   .article-header {
     @include centered-content;
+    margin-top: 12px;
     margin-bottom: 12px;
 
-    datetime { display: block; margin-bottom: 30px; }
-    .article-image { display: block; width: 100%; height: auto !important; }
+    datetime { display: block; margin-bottom: 30px; @include centered-content; }
   }
 
   .article-body {
-    @include centered-content;
     padding-bottom: 60px;
 
-    ul, ol, p { margin-bottom: 1em; }
-    ul li, ol li { margin-left: 1em; }
+    ul, ol, p { margin-bottom: 1em; @include centered-content; }
+    ul li, ol li { margin-left: 1.2em; }
     ul { list-style: outside square; }
-    ol { list-style: outside decimal; margin-left:10px; }
+    ol { list-style: outside decimal; }
   }
 
   .article-footer {
@@ -129,6 +133,14 @@ blockquote + h6 { padding-top: 24px; }
 // Media Queries
 @media screen and (min-width: 450px) {
   html { font-size: 20px; line-height: 30px; }
+}
+@media screen and (min-width: 624px) {
+	blockquote p { max-width: 500px; position: relative; left: 50px; }
+	blockquote:before { display:block; @include centered-content; content:"\201C"; color:#999; font-size:10em; position:relative; top:0.3em; }
+	.node-article { padding-right:0; padding-left:0; }
+}
+@media screen and (min-width: 800px) {
+	blockquote p { max-width: 650px; }
 }
 
 //////////////////////////////
