--- a/css/screen.css
+++ b/css/screen.css
@@ -252,9 +252,13 @@ h6 { font-variant: small-caps; color: #000; }
 @media screen and (min-width: 624px) { h6 { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { h6 { width: 750px; } }
 
-a:link { color: #66f; }
+a { text-decoration: none; color: #1a1afa; }
 
-a:visited { color: #009; }
+a:link:hover, a:hover { color: #4c4cfa; }
+
+a:visited { color: #4c4cfa; }
+
+a:visited:hover { color: #1a1afa; }
 
 a:active { color: #f66; }
 
@@ -311,7 +315,9 @@ blockquote + h2, blockquote + h3, blockquote + h4, blockquote + h5, blockquote +
 .node-article .article-footer .related-content ul { list-style: square outside; margin-left: 24px; }
 
 @media screen and (min-width: 450px) { html { font-size: 20px; line-height: 30px; } }
-@media screen and (min-width: 624px) { blockquote p { max-width: 500px; position: relative; left: 50px; }
+@media screen and (min-width: 624px) { h1 { font-size: 54px; line-height: 60px; }
+  h2 { font-size: 36px; line-height: 42px; }
+  blockquote p { max-width: 500px; position: relative; left: 50px; }
   blockquote:before { display: block; content: "\201C"; color: #999; font-size: 10em; position: relative; top: 0.3em; }
   .node-article { padding-right: 0; padding-left: 0; } }
 @media screen and (min-width: 624px) and (min-width: 624px) { blockquote:before { width: 600px; margin-right: auto; margin-left: auto; } }
@@ -321,4 +327,5 @@ blockquote + h2, blockquote + h3, blockquote + h4, blockquote + h5, blockquote +
 @media screen and (min-width: 624px) { #home #main-content { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { #home #main-content { width: 750px; } }
 #home #main-content article { margin: 30px; }
+#home #main-content datetime { margin-bottom: 0; }
 #home #main-content .pagination { margin: 60px auto 0 auto; text-align: center; }
