--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>{% if paginator and paginator.page > 1 %}Posts Page {{ paginator.page }}{% else %}{{ page.title }}{% endif %} | Bryce Fisher-Fleig</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/css/print.css" media="print" rel="stylesheet" type="text/css">
   <link href="/favicon.ico" rel="shortcut icon">
