--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>{% if paginator and paginator.page > 1 %}Posts Page {{ paginator.page }}{% else %}{{ page.title }}{% endif %} | Bryce Fisher-Fleig</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  
   <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/css/print.css" media="print" rel="stylesheet" type="text/css">
-  <link href="/favicon.ico" rel="shortcut icon">
-  <link href="{{ site.url }}{{ page.url }}" rel="canonical">
-  <link href="{{ site.url }}/feed.xml" rel="alternate" type="application/rss+xml" title="Bryce Fisher-Fleig's Blog">
   <!--[if IE]>
       <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
+  <link href="/favicon.ico" rel="shortcut icon">
+  
+  <link rel="dns-prefetch" href="//ssl.google-analytics.com">
+  <link rel="dns-prefetch" href="//brycefisherfleig-blog.disqus.com">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <link href="{{ site.url }}{{ page.url }}" rel="canonical">
+  <link href="{{ site.url }}/feed.xml" rel="alternate" type="application/rss+xml" title="Bryce Fisher-Fleig's Blog">
 </head>
 <body id="{{ page.css_id }}">
   <nav id="header">
