--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -90,6 +90,7 @@ blockquote + h6 { padding-top: 24px; }
     padding-bottom: 60px;
 
     ul, ol, p { margin-bottom: 1em; @include centered-content; }
+    ul ul, ul ol, ol ol, ol ul { margin-bottom: 0; }
     ul li, ol li { margin-left: 1.2em; }
     ul { list-style: outside square; }
     ol { list-style: outside decimal; }
@@ -140,6 +141,9 @@ blockquote + h6 { padding-top: 24px; }
 @media screen and (min-width: 624px) {
 	h1 { font-size: 72px; line-height: 84px; }
 	h2 { font-size: 36px; line-height: 42px; }
+
+  ul, ol { padding-left: 20px; }
+  ul ul, ol ol, ul ol, ol ul { padding-left: 0; }
 	
 	blockquote p { max-width: 500px; position: relative; left: 50px; }
 	blockquote:before { display:block; @include centered-content; content:"\201C"; color:#999; font-size:10em; position:relative; top:0.3em; }
@@ -147,6 +151,7 @@ blockquote + h6 { padding-top: 24px; }
 	.node-article { padding-right:0; padding-left:0; }
 }
 @media screen and (min-width: 800px) {
+  ul, ol { padding-left: 50px; }
 	blockquote p { max-width: 650px; }
 }
 
